# openlitespeed

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  LSQUICCOMMIT  Makefile.am  Makefile.in  README.md  aclocal.m4  ax_check_brotli.m4  ax_check_libudns.m4  ax_check_openssl.m4  ax_check_zlib.m4  ax_lib_expat.m4  ax_path_lib_pcre.m4  build.sh  configure  configure.ac  configure.in  dlbrotli.sh  dlbssl.sh  dlmaxminddb.sh  dlossl.sh  fixtimestamp.sh  format.sh  install_lsrecaptcha.sh  installudns.sh  modverinfo.sh  tatus  thread_sanitizer_suppress  v1.2
lshostexec/: CMakeLists.txt  lshostexec.c  lshostexec.h  nsutils.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.cmake  config.h.in  httpdtest.cpp  httpdtest.h  liblsquic  lshpack  main.cpp
src/adns/: CMakeLists.txt  Makefile.in  adns.cpp  adns.h
src/edio/: CMakeLists.txt  Makefile.am  Makefile.in  aioeventhandler.cpp  aioeventhandler.h  aiooutputstream.cpp  aiooutputstream.h  aioreqeventhandler.h  aiosendfile.cpp  aiosendfile.h  bufferedos.cpp  bufferedos.h  cacheos.cpp  cacheos.h  callbackqueue.cpp  callbackqueue.h  devpoller.cpp  devpoller.h  ediostream.cpp  ediostream.h  epoll.cpp  epoll.h  eventhandler.h  eventnotifier.cpp  eventnotifier.h  eventprocessor.cpp  eventprocessor.h  eventreactor.cpp  eventreactor.h  evtcbque.cpp  evtcbque.h  fdindex.cpp  fdindex.h  flowcontrol.cpp  flowcontrol.h  inputstream.cpp  inputstream.h  iochain.cpp  iochain.h  iouring.cpp  (+36 more)
src/extensions/: CMakeLists.txt  Makefile.am  Makefile.in  detached.h  extconn.cpp  extconn.h  extrequest.cpp  extrequest.h  extworker.cpp  extworker.h  extworkerconfig.cpp  extworkerconfig.h  httpextprocessor.cpp  httpextprocessor.h  iprocessortimer.cpp  iprocessortimer.h  l4conn.cpp  l4conn.h  loadbalancer.cpp  loadbalancer.h  localworker.cpp  localworker.h  localworkerconfig.cpp  localworkerconfig.h  pidlist.cpp  pidlist.h  ssl4conn.cpp  ssl4conn.h
src/h2/: CMakeLists.txt  Makefile.am  Makefile.in  h2connbase.cpp  h2connbase.h  h2connection.cpp  h2connection.h  h2protocol.cpp  h2protocol.h  h2stream.cpp  h2stream.h  h2streambase.cpp  h2streambase.h  h2streampool.cpp  h2streampool.h  lsxpack_error_code.h  ssledstream.cpp  ssledstream.h  unpackedheaders.cpp  unpackedheaders.h
src/http/: CMakeLists.txt  Makefile.am  Makefile.in  accesscache.cpp  accesscache.h  accesslog.cpp  accesslog.h  adns.cpp  adns.h  authuser.cpp  authuser.h  awstats.cpp  awstats.h  cacheelement.h  chunkinputstream.cpp  chunkinputstream.h  chunkoutputstream.cpp  chunkoutputstream.h  clientcache.cpp  clientcache.h  clientinfo.cpp  clientinfo.h  connlimitctrl.cpp  connlimitctrl.h  contextlist.cpp  contextlist.h  contextnode.cpp  contextnode.h  contexttree.cpp  contexttree.h  datetime.cpp  datetime.h  denieddir.cpp  denieddir.h  eventdispatcher.cpp  eventdispatcher.h  expiresctrl.cpp  expiresctrl.h  expression.cpp  expression.h  (+159 more)
src/liblsquic/: Makefile.am  Makefile.in  lsquic_enc_sess_ietf.c  lsquic_full_conn_ietf.c
src/log4cxx/: CMakeLists.txt  Makefile.am  Makefile.in  appender.cpp  appender.h  appendermanager.cpp  appendermanager.h  bench.cpp  fileappender.cpp  fileappender.h  ilog.cpp  ilog.h  layout.cpp  layout.h  level.cpp  level.h  logger.cpp  logger.h  loggingevent.cpp  loggingevent.h  logrotate.cpp  logrotate.h  logsession.h  nsdefs.h  patternlayout.cpp  patternlayout.h  tmplogid.h
src/lsiapi/: CMakeLists.txt  Makefile.am  Makefile.in  ediohandler.cpp  ediohandler.h  envmanager.cpp  envmanager.h  internal.h  linklist.c  linklist.h  lsiapi.cpp  lsiapi.h  lsiapi_const.cpp  lsiapi_const.h  lsiapigd.cpp  lsiapigd.h  lsiapihooks.cpp  lsiapihooks.h  lsiapilib.cpp  lsiapilib.h  lsimoduledata.cpp  lsimoduledata.h  moduleeventnotifier.cpp  moduleeventnotifier.h  modulehandler.cpp  modulehandler.h  modulemanager.cpp  modulemanager.h  moduletimer.cpp  moduletimer.h  usereventnotifier.cpp  usereventnotifier.h
src/lsr/: CMakeLists.txt  ls_aho.c  ls_base64.c  ls_buf.c  ls_confparser.c  ls_hash.c  ls_internal.h  ls_lfqueue.c  ls_lfstack.c  ls_llmq.c  ls_llxq.c  ls_lock.c  ls_loopbuf.c  ls_map.c  ls_memcheck.h  ls_mpscq.c  ls_objarray.c  ls_objpool.c  ls_offload.h  ls_pcreg.c  ls_pool.c  ls_pooldef.h  ls_poolint.h  ls_ptrlist.c  ls_radix.c  ls_shm.cpp  ls_stopwatch.c  ls_str.c  ls_strlist.c  ls_strtool.c  ls_threadcheck.h  ls_xpool.c  ls_xpool_int.h  lsr_aho.c  lsr_base64.c  lsr_buf.c  lsr_confparser.c  lsr_crc64.c  lsr_dlinkq.c  lsr_hash.c  (+19 more)
src/lstl/: thash.h
src/main/: CMakeLists.txt  Makefile.am  Makefile.in  configctx.cpp  configctx.h  httpconfigloader.cpp  httpconfigloader.h  httpserver.cpp  httpserver.h  httpserverbuilder.cpp  httpserverbuilder.h  lshttpdmain.cpp  lshttpdmain.h  mainserverconfig.cpp  mainserverconfig.h  plainconf.cpp  plainconf.h  serverinfo.cpp  serverinfo.h  timestamp.h  zconfclient.cpp  zconfclient.h  zconfmanager.cpp  zconfmanager.h
src/modules/: CMakeLists.txt  Makefile.am  Makefile.in  prelinkedmods.cpp
src/quic/: CMakeLists.txt  Makefile.am  Makefile.in  ls_sendmmsg.h  packetbuf.h  pbset.cpp  pbset.h  quicengine.cpp  quicengine.h  quiclog.h  quicshm.cpp  quicshm.h  quicstream.cpp  quicstream.h  udplistener.cpp  udplistener.h  udpspoof.h
src/shm/: CMakeLists.txt  Makefile.am  Makefile.in  addrmap.cpp  addrmap.h  ls_fallocate.c  ls_shmhashcmp.cpp  ls_shmhashstat.cpp  ls_shmstat.cpp  lsi_shm.cpp  lsi_shm.h  lslock.cpp  lslock.h  lsshm.cpp  lsshm.h  lsshmcache.cpp  lsshmcache.h  lsshmhash.cpp  lsshmhash.h  lsshmlock.cpp  lsshmlock.h  lsshmlru.c  lsshmlru.h  lsshmlruhash.cpp  lsshmlruhash.h  lsshmmemcached.cpp  lsshmmemcached.h  lsshmpool.cpp  lsshmpool.h  lsshmtidmgr.cpp  lsshmtidmgr.h  lsshmtypes.h
src/socket/: CMakeLists.txt  Makefile.am  Makefile.in  coresocket.cpp  coresocket.h  datagramsocket.cpp  datagramsocket.h  errorno.cpp  errorno.h  filecntl.cpp  filecntl.h  gsockaddr.cpp  gsockaddr.h  hostinfo.cpp  hostinfo.h  ipv4addr.cpp  ipv4addr.h  ls_sock.c  ls_sock.h  rawsocket.cpp  rawsocket.h  reuseport.cpp  reuseport.h  serversocket.cpp  (+12 more)
test/: CMakeLists.txt  asan_run  unittest_helpers.cpp  unittest_main.cpp  unittest_main_light.cpp
(+1036 files in other folders)
